fixed site tagline on mobile

--- a/user/themes/straightline/css/style.css
+++ b/user/themes/straightline/css/style.css
@@ -8,14 +8,12 @@ body {
     text-align: center;
     font-size: 5rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
 #header div {
-    padding: 5px;
-    margin-bottom: 15px;
 }
 
 #header .logo {
@@ -27,7 +25,6 @@ body {
     flex: 1 1 0;
     text-align: left;
     font-size: 1.5rem;
-    padding-top: 10px;
 }
 
 #home {
@@ -62,32 +59,42 @@ a:hover {
     text-decoration: line-through;
 }
 
-@media only screen and (min-device-width: 500px) {
-dl {
-	overflow:	hidden;
-	width:		100%;
-	margin:		0;
-	padding:	0;
-	text-align:	left;
-	font-size: 1.2em;
-}
+@media only screen and (min-width: 625px) {
 
-dt {
-	float:			left;
-	width:			50%;
-	margin:			0;
-	padding:		0;
-	padding-right:	0;
-	text-align:		right;
-}
+    #header {
+        flex-direction: row;
+    }
 
-dd {
-	float:			right;
-	width:			50%;
-	margin:			0;
-	padding:		0;
-	padding-left:	0;
-    visibility:     hidden;
+    #header .tagline {
+        padding-left: 10px;
+        padding-top: 0.3rem;
+    }
 
-}
+    dl {
+        overflow:	hidden;
+        width:		100%;
+        margin:		0;
+        padding:	0;
+        text-align:	left;
+        font-size: 1.2em;
+    }
+
+    dt {
+        float:			left;
+        width:			50%;
+        margin:			0;
+        padding:		0;
+        padding-right:	0;
+        text-align:		right;
+    }
+
+    dd {
+        float:			right;
+        width:			50%;
+        margin:			0;
+        padding:		0;
+        padding-left:	0;
+        visibility:     hidden;
+
+    }
 }
